--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,19 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
+	<classpathentry kind="lib" path="/home/caio/.ivy2/cache/io.spray/spray-can_2.11/bundles/spray-can_2.11-1.3.3.jar"/>
+	<classpathentry kind="lib" path="/home/caio/.ivy2/cache/io.spray/spray-io_2.11/bundles/spray-io_2.11-1.3.3.jar"/>
+	<classpathentry kind="lib" path="/home/caio/.ivy2/cache/io.spray/spray-util_2.11/bundles/spray-util_2.11-1.3.3.jar"/>
+	<classpathentry kind="lib" path="/home/caio/.ivy2/cache/io.spray/spray-http_2.11/bundles/spray-http_2.11-1.3.3.jar"/>
+	<classpathentry kind="lib" path="/home/caio/.ivy2/cache/org.parboiled/parboiled-scala_2.11/jars/parboiled-scala_2.11-1.1.7.jar"/>
+	<classpathentry kind="lib" path="/home/caio/.ivy2/cache/org.parboiled/parboiled-core/jars/parboiled-core-1.1.7.jar"/>
+	<classpathentry kind="lib" path="/home/caio/.ivy2/cache/io.spray/spray-routing_2.11/bundles/spray-routing_2.11-1.3.3.jar"/>
+	<classpathentry kind="lib" path="/home/caio/.ivy2/cache/io.spray/spray-httpx_2.11/bundles/spray-httpx_2.11-1.3.3.jar"/>
+	<classpathentry kind="lib" path="/home/caio/.ivy2/cache/org.scala-lang.modules/scala-xml_2.11/bundles/scala-xml_2.11-1.0.3.jar"/>
+	<classpathentry kind="lib" path="/home/caio/.ivy2/cache/org.jvnet.mimepull/mimepull/jars/mimepull-1.9.5.jar"/>
+	<classpathentry kind="lib" path="/home/caio/.ivy2/cache/com.chuusai/shapeless_2.11/jars/shapeless_2.11-1.2.4.jar"/>
+	<classpathentry kind="lib" path="/home/caio/.ivy2/cache/com.typesafe.akka/akka-actor_2.11/jars/akka-actor_2.11-2.4.1.jar"/>
+	<classpathentry kind="lib" path="/home/caio/.ivy2/cache/com.typesafe/config/bundles/config-1.3.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
